# docs/swagger.yaml
@@ -7,6 +7,7 @@ definitions:
       created_at:
         type: string
       deleted_at:
+        description: Soft delete alanı
         type: string
       id:
         type: integer
@@ -26,6 +27,7 @@ definitions:
       created_at:
         type: string
       deleted_at:
+        description: Soft delete alanı
         type: string
       id:
         type: integer
@@ -263,6 +265,36 @@ paths:
       tags:
       - TodoLists
   /todolists/{id}/items:
+    get:
+      description: Retrieve all items for a specific todo list
+      parameters:
+      - description: Todo List ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.TodoItem'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get items for a specific todo list
+      tags:
+      - TodoItems
     post:
       consumes:
       - application/json
